--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,6 +38,7 @@ jobs:
       uses: actions/upload-pages-artifact@v3
       with:
         path: './dist'
+        destination_dir: home
         
     - name: Deploy to GitHub Pages
       id: deployment
